force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/IMC_CUSTOMER_USER_SETUP__e.object-meta.xml
<CustomObject>
    <description>mulesoft application going to use this platform event to capture the IMC customer and user data to process it to IMC</description>
    <label>IMC_CUSTOMER_USER_SETUP</label>
    <pluralLabel>IMC_CUSTOMER_USER_SETUP</pluralLabel>
</CustomObject>