force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/fields/Billing_Division__c.field-meta.xml
<CustomField>
    <fullName>Billing_Division__c</fullName>
    <label>Billing_Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>