force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/fields/case_Id__c.field-meta.xml
<CustomField>
    <fullName>case_Id__c</fullName>
    <label>case_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>