force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>