force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/fields/Department_name__c.field-meta.xml
<CustomField>
    <fullName>Department_name__c</fullName>
    <label>Department_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>