force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/fields/Division_name__c.field-meta.xml
<CustomField>
    <fullName>Division_name__c</fullName>
    <label>Division_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>