force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/fields/NCSP_Service_line__c.field-meta.xml
<CustomField>
    <fullName>NCSP_Service_line__c</fullName>
    <label>NCSP_Service_line</label>
    <length>15</length>
    <type>Text</type>
</CustomField>