force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <label>PO_Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>