force-app/main/default/objects/IMC_CUSTOMER_USER_SETUP__e/fields/Secure_Shred_Application__c.field-meta.xml
<CustomField>
    <fullName>Secure_Shred_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to hold the value Secure Shred App YES or NO populated based on Ncsp Service line in flow</description>
    <label>Secure Shred Application</label>
    <type>Checkbox</type>
</CustomField>